2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_free), (gst_ttml_attribute_copy),
	(gst_ttml_attribute_type_name):
	* src/gstttmlenums.h:
	* src/gstttmlevent.c: (gst_ttml_event_free),
	(gst_ttml_event_new_attr_update), (gst_ttml_event_type_name):
	* src/gstttmlparse.c: (gst_ttmlparse_parse_event),
	(gst_ttmlparse_sax2_element_start_ns),
	(gst_ttmlparse_sax2_element_end_ns),
	(gst_ttmlparse_sax_document_start):
	* src/gstttmlparse.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose):
	* src/gstttmlstate.c: (gst_ttml_state_reset),
	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute),
	(gst_ttml_state_save_attr_stack),
	(gst_ttml_state_restore_attr_stack):
	* src/gstttmlstate.h:
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	* src/gstttmlutils.c: (gst_ttml_utils_node_type_parse),
	(gst_ttml_utils_node_type_name):
	Initial steps towards adding region support. So far, regions are just
	a parallel mechanism for styling. No rendering code has been added yet.
	Support the layout and region nodes, and the region attribute.
	Rename some events and methods to avoid future confusion with regions.
	Comments! this code is confusing enough as it is.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_restore_attr_stack):
	Consistent warning messages when a reference to an undefined style is
	found.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_end_ns):
	Add a CRLF at the end of every P node, as the spec says.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_start_ns):
	Whitespace.

2014-04-17  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_push_attr),
	(gst_ttmlparse_sax2_element_start_ns):
	Make local node attributes override style attributes regardless of